gpa: change name for packagist

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
     },
     "require": {
 	"ovh/ovh": "dev-master",
-	"lycoch/OVHClient": "dev-master"
+	"lycoch/ovh-client": "dev-master"
     }
 }
